public/stylesheets/talent.css
    /* Talent Page Layout */

    #scrollarrow{
        display: none;
        width: 30px;
        height: 30px;
        position: fixed;
        top: 0;
        z-index: 150;
        background:url("/img/arrows/scroll-arrow.png");
        background-color: rgb(14, 26, 64);
        background-size: contain;
        background-repeat: no-repeat;
        border: 2px solid #969696;
        border-radius: 5px;
        cursor: pointer;
    }

    /* Class Selection Menu */

    .character-button {
        width: 50px;
        height: 50px;
        border: 2px solid #969696;
        cursor: pointer;
        transition: .5s;
    }

    #warriorbtn {
        background-image: url("/img/class-icons/warrioricon.png");
        background-size: cover;
        background-color: transparent;
    }

    #magebtn {
        background-image: url("/img/class-icons/mageicon.png");
        background-size: cover;
        background-color: transparent;
    }

    #roguebtn {
        background-image: url("/img/class-icons/rogueicon.png");
        background-size: cover;
        background-color: transparent;
    }

    #priestbtn {
        background-image: url("/img/class-icons/priesticon.png");
        background-size: cover;
        background-color: transparent;
    }

    #hunterbtn {
        background-image: url("/img/class-icons/huntericon.png");
        background-size: cover;
        background-color: transparent;
    }

    #warlockbtn {
        background-image: url("/img/class-icons/warlockicon.png");
        background-size: cover;
        background-color: transparent;
    }

    #druidbtn {
        background-image: url("/img/class-icons/druidicon.png");
        background-size: cover;
        background-color: transparent;
    }

    #shamanbtn {
        background-image: url("/img/class-icons/shamanicon.png");
        background-size: cover;
        background-color: transparent;
    }

    #paladinbtn {
        background-image: url("/img/class-icons/paladinicon.png");
        background-size: cover;
        background-color: transparent;
    }

    .menucontainer {
        position: relative;
        width: 100%;
        margin-bottom: 15px;
    }

    #talentmenutext {
        width: 100px;
        margin: 10px auto;
        text-align: center;
        color: #FFF;
        text-align: center;
        font-size: 18px;
        z-index: 50;
        background-color: rgba(14, 26, 64, 0.8);
        border: 2px solid #969696;
        pointer-events: none;
        -webkit-touch-callout: none; 
        -webkit-user-select: none; 
         -khtml-user-select: none; 
           -moz-user-select: none; 
            -ms-user-select: none; 
                user-select: none
    }

    #menu {
        text-align: center;
        list-style: none;
    }

    .menu-item {
        display: inline-block;
        line-height: 5px;
    }

    .tooltip {
        visibility: hidden;
        position: absolute;
        height: auto;
        background-color: rgba(14, 26, 64, 0.8);
        opacity: 1;
        z-index: 50;
        text-align: center;
        border-radius: 5px;
        border: 2px solid #969696;
    }

    .tooltip h1{
        color: #FFF;
        padding: 5px;
        font-size: 17px;
    }

    .tooltip p{
        color: #ecb939;
        padding: 5px;
        font-size: 12px;
    }

    /* Talent Tree Layout */

    /* Talent Tree Box */
    /* Talent Data Row */

    #talentdatarow{
        width: 100%;
        display: inline-flex;
        justify-content: center;
    }

    #copylinkbutton{
        height: auto;
        color: #ecb939;
        padding: 10px;
        font-size: 16px;
        margin-right: 25px;
        background-color: rgba(14, 26, 64, .8);
        border: 2px solid #969696;
        box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
        border-radius: 5px;
        cursor: pointer;
    }

    #treeresetbutton{
        color: #ecb939;
        height: auto;
        padding: 10px;
        margin-right: 20%;
        font-size: 16px;
        font-family: 'Oswald', sans-serif;    
        background-color: rgba(14, 26, 64, .8);
        border: 2px solid #969696;
        box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
        border-radius: 5px;
        cursor: pointer;
    }

    #totaltalentpoints {
        height: auto;
        padding: 10px;
        font-size: 16px;
        -webkit-touch-callout: none; 
        -webkit-user-select: none; 
         -khtml-user-select: none; 
           -moz-user-select: none; 
            -ms-user-select: none; 
                user-select: none
    }

    #totaltalentpoints h2{
        color: #FFF;
    }

    /* Talent Tree  */

    .talentcontainer {
        width: 100%;
        margin-top: 5px;
    }

    @media(min-width: 320px) {
        .talentcontainer {
            display: inline-block;
            height: auto;
        }
        .classtalents{
            margin: auto;
            margin-bottom: 30px;
        }
    }

    @media(min-width: 750px) {
        .talentcontainer {
            display: inline-block;
            height: auto;
            width: 100%;
            text-align: center;
        }
        .classtalents{
            display: inline-block;
            margin-top: 25px;
            margin-right: 35px;
            margin-left: 35px;
            margin-bottom: 30px;
        }
    }

    @media(min-width: 1200px) {
        .talentcontainer {
            display: flex;
            justify-content: space-evenly;
            height: 700px;
        }
    }

    .classtalents {
        height: 600px;
        width: 280px;
        background-size: cover;
        background-position: center;
        box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
        border-radius: 5px;
        border: 2px solid #969696;
    }

    .talentheader {
        height: 30px;
        width: 100%;
        color: #FFF;
        background-color: rgba(14, 26, 64, .8);
        align-items: center;
        justify-content: center;
        display: inline-flex;
        padding: 2px 0;
        border-bottom: 1px solid #696969;
    }

    .talentheader p {
        font-size: 16px;
        margin: 0 10px;
    }

    .iconcontainer{
        width: 25px;
        height: 25px;
        margin-left: 10px;
        background-repeat: no-repeat;
        background-size: contain;
        border: 1px solid #696969;
        box-shadow: 0 14px 40px rgba(0, 0, 0, 0.25), 0 5px 5px rgba(0, 0, 0, 0.22);
    }

    .table-borderless {
        height: 560px;
        width: 100%;
        padding-bottom: 10px;
        -webkit-touch-callout: none;
        -webkit-user-select: none;
        -khtml-user-select: none;
        -moz-user-select: none;
        -ms-user-select: none;
        user-select: none;
    }

    td {
        height: 60px;
        width: 20%;
        text-align: center;
        padding: 3%;
        position: relative;
        filter: grayscale(100%);
    }

    td .talentimage {
        background-repeat: no-repeat;
        background-position: center;
        background-size: contain;
        height: 45px;
        width: auto;
    }

    .individualtalentpoints {
        width: 30px;
        display: none;
        position: absolute;
        bottom: 10px;
        right: 5px;
        color: #FFF;
        background-color: black;
        font-size: 12px;
        border-radius: 8px;
        border: 2px solid green;
    }

    .currenttalentpoints {
        width: 30%;
        height: 100%;
    }

    .maxtalentpoints {
        width: 30%;
        height: 100%;
    }

    .arrowcontainer {
        display: none;
        position: absolute;
        pointer-events: none;
        z-index: 10;
        filter: grayscale(100%)
    }

    .secondarrowcontainer {
        display: none;
        position: absolute;
        pointer-events: none;
        z-index: 10;
        filter: grayscale(100%)
    }

    .arrowdiv {
        width: 100%;
    }

    .sharesrow {
        display: block;
        position: absolute;
        height: 50%;
        top: 25%;
        right: -15%;
    }

    .sharescolumn {
        display: block;
        position: absolute;
        width: 50%;
        right: 25%;
    }

    .arrowright {
        background-repeat: no-repeat;
        background-position: right;
        height: 100%;
    }

    .arrowbottom {
        height: 100%;
        background-position: bottom;
        background-repeat: no-repeat;
    }

    .crossesbothcolumsnandrows {
        display: block;
        position: absolute;
        top: 35%;
        right: -85%;
    }

    .arrowrightbottombottom {
        height: 100%;
        width: 75%;
        background-position: right;
        background-repeat: no-repeat;
        background-size: cover;
    }

    .activetalent {
        filter: none;
    }

    .loadedtalent{
        border-width: 2px;
        border-style: solid;
        border-radius: 8px;
        border-color: gray;
    }

    .activetalentimage {
        border-color: green;
        box-shadow: "0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22)";
    }

    .activetalentnopoints {
        border-color: red;
    }

    .talentwithpoints {
        border-color: green;
    }

    .maxranktalent {
        border-color: #DAA520;
    }

    /* Talent Output Boxes */

    #talentOutputContainer {
        display: none;
        background-color: rgba(14, 26, 64, .8);
        width: 100%;
        height: auto;
        padding: 15px;
        border-radius: 5px;
        border: 1px solid #d3d3d3;
    }
    
    #talentOutputContainer h1{
        text-align: center;
        color: #FFF;
        font-size: 22px;
    }

    #talentOutputContainer p{
        color: #ecb939;
        padding: 5px;
    }

    .talentOutput {
        width: auto;
        height: auto;
    }

